Closed Bug 1780834 Opened 2 years ago Closed 2 years ago

WebP image on istockphoto is not displayed

Categories

(Core :: Graphics: ImageLib, defect)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr102 --- fixed
firefox103 --- wontfix
firefox104 --- fixed
firefox105 --- fixed

People

(Reporter: Nomis101, Assigned: tnikkel)

References

Details

Attachments

(1 file)

The image on this page is displayed in Safari and Google Chrome on Mac, but not in Firefox.
https://www.istockphoto.com/de/foto/cocktail-am-pool-genie%C3%9Fen-gm950688808-259497731

The Image is in webp format. image.webp.enabled is set to true. Firefox gives an error in the console "Image corrupt or truncated." After investigating the picture it seems the image contains XML metadata.

Tested with Firefox 102 and 104.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/79318e646218 If a webp file header specifies ICCP but no ICCP chunk is found just ignore it and continue. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch

Thanks for the fix. I can verify that this is fixed now. I was wondering if it would be possible to have this fixed in 102ESR as well? Or is there something against it?

I'll ask Ryan about 102ESR.

Flags: needinfo?(ryanvm)

Seems reasonable. Go ahead and nominate for Beta and ESR102.

Flags: needinfo?(ryanvm) → in-testsuite+

Comment on attachment 9286754 [details]
Bug 1780834. If a webp file header specifies ICCP but no ICCP chunk is found just ignore it and continue. r?aosmond

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: some webp images not displayed
  • User impact if declined: some webp images not displayed
  • Fix Landed on Version: 105
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): we process the webp file the same as every other webp that doesn't have a single bit set in the header

Beta/Release Uplift Approval Request

  • User impact if declined: some webp images not displayed
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): we process the webp file the same as every other webp that doesn't have a single bit set in the header
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9286754 - Flags: approval-mozilla-esr102?
Attachment #9286754 - Flags: approval-mozilla-beta?

Comment on attachment 9286754 [details]
Bug 1780834. If a webp file header specifies ICCP but no ICCP chunk is found just ignore it and continue. r?aosmond

Approved for 104.b3

Attachment #9286754 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9286754 [details]
Bug 1780834. If a webp file header specifies ICCP but no ICCP chunk is found just ignore it and continue. r?aosmond

Approved for 102.2esr

Attachment #9286754 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
Regressions: 1794754
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: