Bug 1780834. If a webp file header specifies ICCP but no ICCP chunk is found just ignore it and continue. r=aosmond, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D152588